--- a/kontaktaoss.html
+++ b/kontaktaoss.html
@@ -2,38 +2,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title></title>
+	<meta http-equiv="Content Type" content="type/html" charset="utf-8">
+	<title>Karlskrona Bowling</title>
+	<meta name="keywords" content="Karlskrona, bowling, cyeberzone">
+	<meta name="description" content="Vällkomen till att spela bowling i Karlskrona.">
+	<link rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
-
-	<script type="text/javascript">
-	var a = 0;
-	$(document).ready(run());				
-	function run(){
-		setInterval('byt()',5000);
-	};
-	function byt(){
-		a++;
-		switch(a){
-			case 1:
-				$("#foto1").fadeOut(500);
-				setTimeout('$("#foto2").fadeIn(500)',500);
-				break;
-			case 2:
-				$("#foto2").fadeOut(500);
-				setTimeout('$("#foto3").fadeIn(500)',500);
-				break;
-			case 3:
-				$("#foto3").fadeOut(500);
-				setTimeout('$("#foto1").fadeIn(500)',500);
-				break;							
-		}
-		if (a>=3) {
-			a=0;
-		}
-	};
-	</script>
 </head>
 <body style="background-image: none;">
 	<div class="content">	
@@ -42,7 +17,7 @@
 		<header>
 			<ul id="headerlist">
 				<li>
-					<a href="karlskronabowling.html">BOWLING</a>
+					<a href="index.html">BOWLING</a>
 				</li>
 				<li>
 					<a href="#karlskronabiljard.html">BILJARD</a>
@@ -71,7 +46,7 @@
 			<aside>
 				<ul id="leftlist">
 					<li id="1">
-						<a href="karlskronabowling.html">Hem</a>
+						<a href="index.html">Hem</a>
 					</li>
 					<li id="2">
 						<a href="kontaktaoss.html">Kontakta oss</a>
@@ -94,7 +69,7 @@
 					$("#1 a").mouseover(function(){
 						$("#1 a").animate({fontSize:"18px"},200);
 						$("#1").css({
-							"background-image": "url('kegel.png')",
+							"background-image": "url('img/kegel.png')",
 							"background-position": "left",
 							"background-repeat": "no-repeat",
 							"background-size": "8%"});
@@ -102,7 +77,7 @@
 					$("#2 a").mouseover(function(){
 						$("#2 a").animate({fontSize:"18px"},200);
 						$("#2").css({
-							"background-image": "url('kegel.png')",
+							"background-image": "url('img/kegel.png')",
 							"background-position": "left",
 							"background-repeat": "no-repeat",
 							"background-size": "8%"});
@@ -110,7 +85,7 @@
 					$("#3 a").mouseover(function(){
 						$("#3 a").animate({fontSize:"18px"},200);
 						$("#3").css({
-							"background-image": "url('kegel.png')",
+							"background-image": "url('img/kegel.png')",
 							"background-position": "left",
 							"background-repeat": "no-repeat",
 							"background-size": "8%"});
@@ -118,7 +93,7 @@
 					$("#4 a").mouseover(function(){
 						$("#4 a").animate({fontSize:"18px"},200);
 						$("#4").css({
-							"background-image": "url('kegel.png')",
+							"background-image": "url('img/kegel.png')",
 							"background-position": "left",
 							"background-repeat": "no-repeat",
 							"background-size": "8%"});
@@ -126,7 +101,7 @@
 					$("#5 a").mouseover(function(){
 						$("#5 a").animate({fontSize:"18px"},200);
 						$("#5").css({
-							"background-image": "url('kegel.png')",
+							"background-image": "url('img/kegel.png')",
 							"background-position": "left",
 							"background-repeat": "no-repeat",
 							"background-size": "8%"});
@@ -134,7 +109,7 @@
 					$("#6 a").mouseover(function(){
 						$("#6 a").animate({fontSize:"18px"},200);
 						$("#6").css({
-							"background-image": "url('kegel.png')",
+							"background-image": "url('img/kegel.png')",
 							"background-position": "left",
 							"background-repeat": "no-repeat",
 							"background-size": "8%"});
@@ -189,10 +164,26 @@ Postadress:
 Cyberzone
 Utövägen 1C
 371 37 Karlskrona
-
-För inzoomad karta klicka på bilden: 
-<a href="https://www.hitta.se/kartan!~56.16213,15.56473,14z/tr!i=KZPFLkXm/search!q=ut%C3%B6v%C3%A4gen%201c%20karlskrona!b=56.15573:15.53177,56.16854:15.59769!t=combined!ai=1005213527!aic=56.16213:15.56473" target="_blank" id="karta" target="_blank"><img src="img/karta.jpg"></a>
 					</pre>
+					<div id="map" style="width: 100%; height: 600px; margin: auto; margin-bottom: 50px; border-radius: 20px;"></div>
+				    <script>
+				      function initMap() {
+				        var myLatLng = {lat: 56.1633797, lng: 15.5683504};
+				        var map = new google.maps.Map(document.getElementById('map'), {
+				          center: myLatLng,
+				          scrollwheel: true,
+				          zoom: 14
+				        });
+				        var marker = new google.maps.Marker({
+				          map: map,
+				          position: myLatLng,
+				          title: 'Hello World!'
+				        });
+				      }
+				    </script>
+					<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIOPiyo6_y50eUoaA5dsXjQhe4N7u6WAU&callback=initMap"
+					    async defer>
+					</script>
 					<h3>
 					INFORMATION
 					</h3>
